--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="La mejor cafeteria de Argentina- Nosotros - Café - Panaderia - Pasteleria">
     <title>TIENDA | Coffe Shop</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/442c935a7a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -19,7 +19,7 @@
                 <div class="row">
                     <nav class="navbar navbar-expand-lg navbar-dark">
                         <div class="container-fluid">
-                            <a class="navbar-brand navbarFont" href="/index.html">The Coffe Store</a>
+                            <a class="navbar-brand navbarFont" href="../index.html">The Coffe Store</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                                 aria-expanded="false" aria-label="Toggle navigation">
