--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -17,7 +17,7 @@
                 <div class="row">
                     <nav class="navbar navbar-expand-lg navbar-dark">
                         <div class="container-fluid">
-                            <a class="navbar-brand navbarFont" href="../index.html">The Coffe Store</a>
+                            <a class="navbar-brand navbarFont" href="./index.html">The Coffe Store</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -26,17 +26,17 @@
                             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" aria-current="page" href="/pages/tienda.html">TIENDA</a>
+                                        <a class="nav-link" aria-current="page" href="tienda.html">TIENDA</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/panaderia.html">PANADERÍA</a>
+                                        <a class="nav-link" href="panaderia.html">PANADERÍA</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/nosotros.html" tabindex="-1"
+                                        <a class="nav-link" href="nosotros.html" tabindex="-1"
                                             aria-disabled="true">NOSOTROS</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/contacto.html" tabindex="-1"
+                                        <a class="nav-link" href="contacto.html" tabindex="-1"
                                             aria-disabled="true">CONTACTO</a>
                                     </li>
                                 </ul>
