--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -7,48 +7,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="La mejor cafeteria de Argentina- Nosotros - Café - Panaderia - Pasteleria">
     <title>TIENDA | Coffe Shop</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="https://kit.fontawesome.com/442c935a7a.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header>
-        <section class="container-fluid bg-black">
-            <section class="container">
-                <div class="row">
-                    <nav class="navbar navbar-expand-lg navbar-dark">
-                        <div class="container-fluid">
-                            <a class="navbar-brand navbarFont" href="../index.html">The Coffe Store</a>
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                    <li class="nav-item navbarFont">
-                                        <a class="nav-link" aria-current="page" href="/pages/tienda.html">TIENDA</a>
-                                    </li>
-                                    <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/panaderia.html">PANADERÍA</a>
-                                    </li>
-                                    <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/nosotros.html" tabindex="-1"
-                                            aria-disabled="true">NOSOTROS</a>
-                                    </li>
-                                    <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/contacto.html" tabindex="-1"
-                                            aria-disabled="true">CONTACTO</a>
-                                    </li>
-                                </ul>
-                            </div>
+<header>
+    <section class="container-fluid bg-black">
+        <section class="container">
+            <div class="row">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <div class="container-fluid">
+                        <a class="navbar-brand navbarFont" href="./index.html">The Coffe Store</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item navbarFont">
+                                    <a class="nav-link" aria-current="page" href="tienda.html">TIENDA</a>
+                                </li>
+                                <li class="nav-item navbarFont">
+                                    <a class="nav-link" href="panaderia.html">PANADERÍA</a>
+                                </li>
+                                <li class="nav-item navbarFont">
+                                    <a class="nav-link" href="nosotros.html" tabindex="-1"
+                                        aria-disabled="true">NOSOTROS</a>
+                                </li>
+                                <li class="nav-item navbarFont">
+                                    <a class="nav-link" href="contacto.html" tabindex="-1"
+                                        aria-disabled="true">CONTACTO</a>
+                                </li>
+                            </ul>
                         </div>
-                    </nav>
-                </div>
-            </section>
+                    </div>
+                </nav>
+            </div>
         </section>
-    </header>
+    </section>
+</header>
     <main class="tienda">
         <section class="container">
             <section class="row">
