--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -28,17 +28,17 @@
                             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" aria-current="page" href="/pages/tienda.html">TIENDA</a>
+                                        <a class="nav-link" aria-current="page" href="tienda.html">TIENDA</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/panaderia.html">PANADERÍA</a>
+                                        <a class="nav-link" href="panaderia.html">PANADERÍA</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/nosotros.html" tabindex="-1"
+                                        <a class="nav-link" href="nosotros.html" tabindex="-1"
                                             aria-disabled="true">NOSOTROS</a>
                                     </li>
                                     <li class="nav-item navbarFont">
-                                        <a class="nav-link" href="/pages/contacto.html" tabindex="-1"
+                                        <a class="nav-link" href="contacto.html" tabindex="-1"
                                             aria-disabled="true">CONTACTO</a>
                                     </li>
                                 </ul>
