--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -78,11 +78,11 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/img/cafeteriaantigua.png" class="d-block w-100" height="729px"
+                        <img src="../assets/img/cafeteriaantigua.png" class="d-block w-100" height="729px"
                             alt="cafeteria antigua">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/img/plano.png" class="d-block w-100" height="729px" alt="planos de cafeteria">
+                        <img src="../assets/img/plano.png" class="d-block w-100" height="729px" alt="planos de cafeteria">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
