--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -54,7 +54,7 @@
                 <p class="panaderiaParrafo">Esta seccion esta basada en nuestros productos de panaderia mas deliciosos, por ahora puedes provar estos productos en nuestro local ubicado en Plaza Rivadavia 255 Oeste.</p>
             </section>
             <section class="panaderiaInfo">
-                <img src="/assets/img/croissant.png" alt="croissant" width="250px" height="250px">
+                <img src="../assets/img/croissant.png" alt="croissant" width="250px" height="250px">
                 <div>
                     <h2 class="panaderiaTitulo">Croissant de chocolate</h2>
                     <p class="panaderiaTexto">Una pieza de panadería compuesta con masa de hojaldre fermentada con un toque de chocolate a la francesa relleno, posee una elaboración total de 4 horas,
@@ -75,11 +75,11 @@
                          apto para ello. El Rey le convirtió en panadero del regimiento y este, como agradecimiento, inventó estos bollos con forma de bola de cañón.
                     </p>
                 </div>
-                <img src="/assets/img/berlinesaa.png" alt="croissant" width="250px" height="250px">
+                <img src="../assets/img/berlinesaa.png" alt="croissant" width="250px" height="250px">
             </section>
 
             <section class="panaderiaInfo">
-                <img src="/assets/img/brownie.png" alt="croissant" width="250px" height="250px">
+                <img src="../assets/img/brownie.png" alt="croissant" width="250px" height="250px">
                 <div>
                     <h2 class="panaderiaTitulo">Bizcocho de chocolate</h2>
                     <p class="panaderiaTexto">Una pieza de pastelería con una masa húmeda de chocolate con nuez, este producto es furor, lleva tres meses desde que pusimos a la venta y
