--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -104,6 +104,6 @@
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
