--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -126,7 +126,7 @@
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
