--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -107,7 +107,7 @@
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
