--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/442c935a7a.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="panaderiaBody">
     <header>
         <section class="container-fluid bg-black">
             <section class="container">
@@ -96,9 +96,12 @@
         <div class="footerInicio">
             <h4>NUESTRAS REDES</h4>
             <div class="icon">
-                <a href="https://www.instagram.com/thecoffeestore/" target="_blank" class="colorIcon fa-brands fa-square-instagram"></a>
-                <a href="https://www.facebook.com/groups/831873321070850" target="_blank" class="colorIcon fa-brands fa-square-facebook"></a>
-                <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank" class="colorIcon fa-brands fa-square-twitter"></a>
+                <a href="https://www.instagram.com/thecoffeestore/" target="_blank"
+                    class="colorIcon fa-brands fa-square-instagram"></a>
+                <a href="https://www.facebook.com/groups/831873321070850" target="_blank"
+                    class="colorIcon fa-brands fa-square-facebook"></a>
+                <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank"
+                    class="colorIcon fa-brands fa-square-twitter"></a>
             </div>
             <h4 class="footerInicio">TE ESPERAMOS</h4>
             <p>Plaza Rivadavia 255 Oeste</p>
