--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -56,21 +56,21 @@
                 <div class="alineadoTarjeta">
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café Colombiano</h3>
-                        <img src="../assets/img/cafeblanco.png" alt="Cafe blanco" width="250">
+                        <img src="../assets/img/cafestarbcol.png" alt="Cafe blanco" width="250">
                         <p class="tarjetaParrafo">Café colombiano de origen único sabor jugoso y a
-                            nuez tostada, Café Amargo elaborado por nosotros.</p>
+                            nuez tostada.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café Verona</h3>
-                        <img src="../assets/img/cafeblanco.png" alt="Cafe Verona" width="250">
-                        <p class="tarjetaParrafo">Café tostado, dulce con notas de cacao oscuro. Café Equilibrado elaborado por nosotros.</p>
+                        <img src="../assets/img/CAFEVERONA.png" alt="Cafe Verona" width="250">
+                        <p class="tarjetaParrafo">Café tostado, dulce con notas de cacao oscuro.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café House Blend</h3>
-                        <img src="../assets/img/cafeblanco.png" alt="Cafe House Blend" width="250" >
-                        <p class="tarjetaParrafo">Café latinoamericano cargado de sabor, con gusto a nueces y cacao. Café Equilibrado elaborado por nosotros.</p>
+                        <img src="../assets/img/cafehouseblend.png" alt="Cafe House Blend" width="250" >
+                        <p class="tarjetaParrafo">Café latinoamericano cargado de sabor, con gusto a nueces y cacao.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
