--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -69,32 +69,8 @@
                     y el negocio prosperó.
                 </p>
             </section>
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/img/cafeteriaantigua.png" class="d-block w-100" height="729px"
-                            alt="cafeteria antigua">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/img/plano.png" class="d-block w-100" height="729px" alt="planos de cafeteria">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+            <div>
+                <img class="nosotrosImg" src="../assets/img/cafeteriaantigua.png" alt="">
             </div>
             <div>
                 <h2 class="nosotrosInicio">
