--- a/index.html
+++ b/index.html
@@ -119,13 +119,16 @@
     </main>
     <footer>
         <div class="footerInicio">
-            <h4>NUESTRAS REDES</h4>
+            <h4 class="footerTitulo">NUESTRAS REDES</h4>
             <div class="icon">
-                <a href="https://www.instagram.com/thecoffeestore/" target="_blank" class="colorIcon fa-brands fa-square-instagram"></a>
-                <a href="https://www.facebook.com/groups/831873321070850" target="_blank" class="colorIcon fa-brands fa-square-facebook"></a>
-                <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank" class="colorIcon fa-brands fa-square-twitter"></a>
+                <a href="https://www.instagram.com/thecoffeestore/" target="_blank"
+                    class="colorIcon fa-brands fa-square-instagram"></a>
+                <a href="https://www.facebook.com/groups/831873321070850" target="_blank"
+                    class="colorIcon fa-brands fa-square-facebook"></a>
+                <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank"
+                    class="colorIcon fa-brands fa-square-twitter"></a>
             </div>
-            <h4 class="footerInicio">TE ESPERAMOS</h4>
+            <h4 class="footerSubtitulo">TE ESPERAMOS</h4>
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
