--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -89,7 +89,7 @@
     </main>
     <footer>
         <div class="footerInicio">
-            <h4>NUESTRAS REDES</h4>
+            <h4 class="footerTitulo">NUESTRAS REDES</h4>
             <div class="icon">
                 <a href="https://www.instagram.com/thecoffeestore/" target="_blank"
                     class="colorIcon fa-brands fa-square-instagram"></a>
@@ -98,7 +98,7 @@
                 <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank"
                     class="colorIcon fa-brands fa-square-twitter"></a>
             </div>
-            <h4 class="footerInicio">TE ESPERAMOS</h4>
+            <h4 class="footerSubtitulo">TE ESPERAMOS</h4>
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
