--- a/pages/panaderia.html
+++ b/pages/panaderia.html
@@ -54,7 +54,7 @@
                 <p class="panaderiaParrafo">Esta seccion esta basada en nuestros productos de panaderia mas deliciosos, por ahora puedes provar estos productos en nuestro local ubicado en Plaza Rivadavia 255 Oeste.</p>
             </section>
             <section class="panaderiaInfo">
-                <img src="../assets/img/croissant.png" alt="croissant" width="250px" height="250px">
+                <img src="../assets/img/croissant.png" alt="croissant" width="163px" height="250px">
                 <div>
                     <h2 class="panaderiaTitulo">Croissant de chocolate</h2>
                     <p class="panaderiaTexto">Una pieza de panadería compuesta con masa de hojaldre fermentada con un toque de chocolate a la francesa relleno, posee una elaboración total de 4 horas,
@@ -66,6 +66,7 @@
                 </div>
             </section>
             <section class="panaderiaInfo">
+                <img src="../assets/img/berlinesaa.png" alt="croissant" width="163px" height="250px">
                 <div>
                     <h2 class="panaderiaTitulo">Berlinesa de la abuela</h2>
                     <p class="panaderiaTexto">Una pieza de panadería con forma de bollo, con una masa bomba de huevo, fermentada y rellena con muselina praliné, es otro éxito, de fácil elaboración y
@@ -75,11 +76,11 @@
                          apto para ello. El Rey le convirtió en panadero del regimiento y este, como agradecimiento, inventó estos bollos con forma de bola de cañón.
                     </p>
                 </div>
-                <img src="../assets/img/berlinesaa.png" alt="croissant" width="250px" height="250px">
+
             </section>
 
             <section class="panaderiaInfo">
-                <img src="../assets/img/brownie.png" alt="croissant" width="250px" height="250px">
+                <img src="../assets/img/brownie.png" alt="croissant" width="163px" height="250px">
                 <div>
                     <h2 class="panaderiaTitulo">Bizcocho de chocolate</h2>
                     <p class="panaderiaTexto">Una pieza de pastelería con una masa húmeda de chocolate con nuez, este producto es furor, lleva tres meses desde que pusimos a la venta y
@@ -94,7 +95,7 @@
     </main>
     <footer>
         <div class="footerInicio">
-            <h4>NUESTRAS REDES</h4>
+            <h4 class="footerTitulo">NUESTRAS REDES</h4>
             <div class="icon">
                 <a href="https://www.instagram.com/thecoffeestore/" target="_blank"
                     class="colorIcon fa-brands fa-square-instagram"></a>
@@ -103,7 +104,7 @@
                 <a href="https://twitter.com/thecoffeestore?lang=es" target="_blank"
                     class="colorIcon fa-brands fa-square-twitter"></a>
             </div>
-            <h4 class="footerInicio">TE ESPERAMOS</h4>
+            <h4 class="footerSubtitulo">TE ESPERAMOS</h4>
             <p>Plaza Rivadavia 255 Oeste</p>
         </div>
     </footer>
