--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./assets/img/fondo1.jpg" class="d-block w-100" alt="foto ilustrativa de café">
+                                <img src="./img/fondo1.jpg" class="d-block w-100" alt="foto ilustrativa de café">
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/img/fondo2.jpg" class="d-block w-100" alt="foto ilustrativa de café">
+                                <img src="./img/fondo2.jpg" class="d-block w-100" alt="foto ilustrativa de café">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
