--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -70,7 +70,7 @@
                 </p>
             </section>
             <div>
-                <img class="nosotrosImg" src="../assets/img/cafeteriaantigua.png" alt="">
+                <img class="nosotrosImg" src="../img/cafeteriaantigua.png" alt="">
             </div>
             <div>
                 <h2 class="nosotrosInicio">
