--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -56,38 +56,38 @@
                 <div class="alineadoTarjeta">
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café Colombiano</h3>
-                        <img src="../assets/img/cafestarbcol.png" alt="Cafe blanco" width="250">
+                        <img src="../img/cafestarbcol.png" alt="Cafe blanco" width="250">
                         <p class="tarjetaParrafo">Café colombiano de origen único sabor jugoso y a
                             nuez tostada.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café Verona</h3>
-                        <img src="../assets/img/CAFEVERONA.png" alt="Cafe Verona" width="250">
+                        <img src="../img/CAFEVERONA.png" alt="Cafe Verona" width="250">
                         <p class="tarjetaParrafo">Café tostado, dulce con notas de cacao oscuro.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Café House Blend</h3>
-                        <img src="../assets/img/cafehouseblend.png" alt="Cafe House Blend" width="250" >
+                        <img src="../img/cafehouseblend.png" alt="Cafe House Blend" width="250" >
                         <p class="tarjetaParrafo">Café latinoamericano cargado de sabor, con gusto a nueces y cacao.</p>
                         <a href="contacto.html" class="button">3400$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Cafetera Expresso</h3>
-                        <img src="../assets/img/cafeteraexpresso.png" alt="Cafetera Expresso" width="250" height="210">
+                        <img src="../img/cafeteraexpresso.png" alt="Cafetera Expresso" width="250" height="210">
                         <p class="tarjetaParrafo">Cuenta con un sofisticado y elegante diseño que se adaptará a tu cocina.</p>
                         <a href="contacto.html" class="button">44990$</a>
                     </article>
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Cafetera Italiana</h3>
-                        <img src="../assets/img/cafeteraitaliana.png" alt="Cafetera Italiana" width="250" height="210">
+                        <img src="../img/cafeteraitaliana.png" alt="Cafetera Italiana" width="250" height="210">
                         <p class="tarjetaParrafo">La cafetera Italiana es fácil de utilizar y produce un café con cuerpo y rico.</p>
                         <a href="contacto.html" class="button">17000$</a>
                     </article> 
                     <article class="tarjeta">
                         <h3 class="tarjetaTitulo">Cafetera de Filtro</h3>
-                        <img src="../assets/img/cafeteraele.png" alt="Cafetera Elextrolux" width="250" height="210">
+                        <img src="../img/cafeteraele.png" alt="Cafetera Elextrolux" width="250" height="210">
                         <p class="tarjetaParrafo">Cafetera Elextrolux ideal para la oficina con capacidad de hasta 1300mL.</p>
                         <a href="contacto.html" class="button">6200$</a>
                     </article> 
