--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -62,7 +62,7 @@
                         <input type="text" name="Correo" placeholder="Correo">
                         <input type="text" name="Telefono" placeholder="Telefono">
                         <textarea name="mensaje" placeholder="Deja tu mensaje aquí" id=""></textarea>
-                        <input type="button" value="ENVIAR" id="botonForms">
+                        <input type="submit" value="ENVIAR" id="botonForms">
                     </form>
                 </div>
             </section>
