--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -9,6 +9,7 @@
     <title>TIENDA | Coffe Shop</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <script src="../js/preEntrega.js"></script>
     <script src="https://kit.fontawesome.com/442c935a7a.js" crossorigin="anonymous"></script>
 </head>
 
